--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "convex init && convex dev --once && concurrently -k -n convex,next -i 'convex dev' 'next dev'",
     "build": "next build",
     "start": "next start"
   },
@@ -15,7 +15,11 @@
     "@types/node": "~16.11.12",
     "@types/react": "17.0.45",
     "@types/react-dom": "17.0.17",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.5.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.3",
     "typescript": "^4.7.3"
   }
 }
