--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.3",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "vivid-studio": "^0.11.1"
   }
 }
