--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "convex": "file:convex-0.3.1.tgz",
+    "convex": "^0.4.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
