--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/node": "~16.11.12",
     "@types/react": "17.0.45",
     "@types/react-dom": "17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.5.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.3",
