--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.3",
-    "typescript": "^4.7.3",
-    "vivid-studio": "^0.11.1"
+    "typescript": "^4.7.3"
   }
 }
