--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "private": true,
   "scripts": {
-    "dev": "convex init && convex dev --once && concurrently -k -n convex,next -i 'convex dev' 'next dev'",
+    "dev": "npm-run-all dev:init --parallel dev:backend dev:frontend",
+    "dev:init": "convex dev --until-success",
+    "dev:backend": "convex dev",
+    "dev:frontend": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "convex": "^0.6.0",
+    "convex": "^1.0.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "~16.11.12",
+    "@types/node": "^20.4.4",
     "@types/react": "17.0.45",
     "@types/react-dom": "17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autoprefixer": "^10.4.13",
-    "concurrently": "^7.5.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.3",
