--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "npm-run-all dev:init --parallel dev:backend dev:frontend",
-    "dev:init": "convex dev --until-success",
+    "dev": "npm-run-all --parallel dev:backend dev:frontend",
+    "predev": "convex dev --until-success",
     "dev:backend": "convex dev",
     "dev:frontend": "next dev",
     "build": "next build",
