--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "npm-run-all dev:init --parallel dev:backend dev:frontend",
-    "dev:init": "convex dev --until-success",
+    "dev": "npm-run-all --parallel dev:backend dev:frontend",
+    "predev": "convex dev --until-success",
     "dev:backend": "convex dev",
     "dev:frontend": "next dev",
     "build": "next build",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "convex": "^1.0.2",
+    "convex": "^1.11.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
