--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "17.0.17",
+    "@types/react": "^18.2.78",
+    "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-react": "^7.31.11",
